image spacing and background image fix for wide screen

--- a/src/assets/home.css
+++ b/src/assets/home.css
@@ -23,7 +23,7 @@ a.anchor{
 }
 img.association{
   position: relative;
-  top: -1em;
+  top: -2.6em;
 }
 
 /* From: https://www.w3schools.com/howto/howto_css_responsive_iframes.asp */
